objects/project__c.object
<CustomObject>
    <fields>
        <fullName>Ac__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2__c</fullName>
        <formula>Ac__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account3__c</fullName>
        <formula>Account2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>test1_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>test1_c</label>
        <referenceTo>test__c</referenceTo>
        <relationshipLabel>projects</relationshipLabel>
        <relationshipName>projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>project</label>
    <nameField>
        <label>project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>